# cluedo-ai

./: .gitignore  README.md  TODO.md  agents.py  game_engine.py  get_logfire_logs.py  main.py  old_promts.txt  pyproject.toml  server.py  template_get_logs.py  tools.py  tools2.py
logs/: concat_raw_logs.py  get_logfire_logs.py  process_logs.py
logs/notebooks/: explore_logs.py
logs/notebooks/__marimo__/session/: explore_logs.py.json
notebooks/: explore_logs.py
run_examples/: fail_but_close.txt  win_fast.txt
scripts/: concat_raw_log_data.py  concat_raw_logs.py  process_logs.py
src/: agents.py  tools.py
